# sk-pqc-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SOP.md  flutter_rust_bridge.yaml  pyproject.toml
docs/: ARCHITECTURE.md
fuzz-harness/: Cargo.toml
fuzz-harness/src/: main.rs
fuzz-harness/tests/: proptest_targets.rs
src/: dm_session.rs  frb_api.rs  frb_generated.rs  kem.rs  lib.rs  python.rs
tests/: integration.rs  parity_python.py
