[package]
name = "sk-pqc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Sovereign shared Rust post-quantum crypto core: the full SK confidentiality toolkit — hybrid X25519+ML-KEM-768 KEM, DM + group epoch ratchets, hybrid DM sealing, the pqroute metadata envelope, anonymous-queue addressing, the crypto-suite registry, and the honest self-report. Clean-room of the SKComms/SKChat/SKSecurity Python; byte-for-byte interoperable."
repository = "https://github.com/smilinTux/sk-core"
keywords = ["pqc", "ml-kem", "x25519", "hybrid", "ratchet"]
categories = ["cryptography"]

[lib]
name = "sk_pqc"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = "0.2.1"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand_core = "0.6"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"

[dev-dependencies]
hex = "0.4"
