[package]
name = "sk-pqc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Sovereign shared Rust post-quantum crypto core: the full SK confidentiality toolkit — hybrid X25519+ML-KEM-768 KEM, DM + group epoch ratchets, hybrid DM sealing, the pqroute metadata envelope, anonymous-queue addressing, the crypto-suite registry, and the honest self-report. Clean-room of the SKComms/SKChat/SKSecurity Python; byte-for-byte interoperable."
repository = "https://github.com/smilinTux/sk-pqc-rs"
keywords = ["pqc", "ml-kem", "x25519", "hybrid", "ratchet"]
categories = ["cryptography"]

[lib]
name = "sk_pqc"
# `rlib` keeps the crate usable as a normal Rust dependency and lets the 99
# in-tree tests link against it (the default `cargo build`/`cargo test` path is
# unchanged + pure-Rust). `cdylib` is what maturin compiles into the Python
# wheel; without the optional `python` feature it is just an inert pure-Rust
# dynamic library (no pyo3, no libpython), so the published crate stays
# dependency-clean and crates.io sees only pure Rust.
crate-type = ["cdylib", "rlib"]

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = "0.2.1"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand_core = "0.6"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
# OPTIONAL PyO3 bindings (feature `python`). abi3 → one wheel spans CPython
# 3.8+; `extension-module` → the wheel does NOT link libpython (the interpreter
# provides it), so `cargo test` without `--features python` never compiles pyo3
# and never needs a Python runtime. Gated so the published crate stays pure Rust.
pyo3 = { version = "0.22", features = ["abi3-py38", "extension-module"], optional = true }
# OPTIONAL flutter_rust_bridge bindings (feature `dart`). Lets the Dart `sk_pqc`
# package be backed by THIS pure-Rust core over FFI (the Dart twin of the PyO3
# win), the way the ML-KEM leg already reaches a native lib. Pinned to match the
# `flutter_rust_bridge_codegen` used to emit the glue. Gated so the default
# `cargo build`/`cargo test` never compiles frb and stays pure Rust.
flutter_rust_bridge = { version = "=2.12.0", optional = true }

[features]
# Build the PyO3 #[pymodule] (`sk_pqc_rs`) into the cdylib. OFF by default.
python = ["dep:pyo3"]
# Build the flutter_rust_bridge API + codegen-emitted glue (`frb_api`,
# `frb_generated`). OFF by default — the 99 in-tree tests never pull in frb.
dart = ["dep:flutter_rust_bridge"]

[dev-dependencies]
hex = "0.4"

[lints.rust]
# `frb_expand` is a cfg set only by the flutter_rust_bridge codegen tool, not
# by cargo; register it so `unexpected_cfgs` recognises it (silences 6 lints in
# the macro-generated `dart`-feature glue without blanket-allowing real typos).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
